# nas-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  debian.Dockerfile  diff.md  log.py  lzc-build.yml  lzc-deploy-params.yml  lzc-manifest.yml  package.yml  package_list.txt  package_list_debian.txt  pyproject.toml
.github/workflows/: build-package.yml  build.yml
app/downloader/client/: qbittorrent.py
app/helper/: chrome_helper.py  cloudflare_helper.py  meta_helper.py
app/message/: message.py
app/plugins/modules/: autosignin.py  cloudflarespeedtest.py  cookiecloud.py  customhosts.py
app/utils/: system_utils.py
docker/: Dockerfile  compose.yml  debian.Dockerfile  readme.md
docker/rootfs/etc/s6-overlay/s6-rc.d/init-010-update/: run
docker/rootfs/etc/s6-overlay/s6-rc.d/init-015-bootstrap-login/: run  up
docker/rootfs/etc/s6-overlay/s6-rc.d/init-020-fixuser/: run
docker/rootfs/etc/s6-overlay/s6-rc.d/svc-nastools/: finish  run
docker/rootfs/etc/s6-overlay/s6-rc.d/svc-redis/: finish  run
package/builder/: Dockerfile  alpine.Dockerfile
scripts/: deploy_lazycat.sh
web/: action.py
web/backend/: pro_user.py  web_utils.py
web/static/components/layout/navbar/: index.js
web/static/components/layout/searchbar/: index.js
web/static/js/: functions.js
web/templates/rename/: history.html  mediafile.html
