[project]
name = "nas-tools"
version = "3.5.9"
description = "NAS媒体库管理工具"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
   "alembic==1.17.1",
   "aniso8601==9.0.1",
   "anitopy==2.1.1",
   "APScheduler==3.11.1",
   "asttokens==2.4.1",
   "async-generator==1.10",
   "attrs==24.2.0",
   "backcall==0.2.0",
   "backports.shutil-get-terminal-size==1.0.0",
   "beautifulsoup4==4.14.2",
   "better-exceptions==0.3.3",
   "bs4==0.0.2",
   "cacheout==0.16.0",
   "cachetools==5.5.0",
   "certifi==2024.8.30",
   "cffi==1.17.1",
   "charset-normalizer==3.4.4",
   "click==8.3.0",
   "cn2an==0.5.23",
   "colorama==0.4.6",
   "colored==1.4.4",
   "cryptography==44.0.0",
   "cssselect==1.3.0",
   "DBUtils==3.1.2",
   "dateparser==1.2.2",
   "decorator==5.2.1",
   "executing==2.2.1",
   "Flask==3.1.2",
   "Flask-Login==0.6.3",
   "fast-bencode==1.1.7",
   "Flask-Compress==1.23",
   "flask-restx==1.3.2",
   "flask-sock==0.7.0",
   "func_timeout==4.3.5",
   "greenlet==3.1.1",
   "guessit==3.8.0",
   "h11==0.16.0",
   "humanize==4.14.0",
   "icalendar==6.3.2",
   "idna==3.11",
   "influxdb==5.3.2",
   "itsdangerous==2.2.0",
   "iso639==0.1.4",
   "jedi==0.19.2",
   "Jinja2==3.1.6",
   "jsonpath==0.82.2",
   "jsonschema==4.25.1",
   "loguru==0.7.3",
   "lxml==5.3.0",
   "libtorrent==2.0.11",
   "Mako==1.3.10",
   "MarkupSafe==3.0.3",
   "matplotlib-inline==0.2.1",
   "msgpack==1.1.2",
   "openai==1.57.0",
   "outcome==1.3.0.post0",
   "parse==1.20.2",
   "parsel==1.10.0",
   "parso==0.8.5",
   "pexpect==4.9.0",
   "pickleshare==0.7.5",
   "PikPakAPI==0.1.11",
   "pillow==10.4.0",
   "PlexAPI==4.17.1",
   "proces==0.1.7",
   "prompt_toolkit==3.0.52",
   "psutil==6.0.0",
   "ptyprocess==0.7.0",
   "pure_eval==0.2.3",
   "pycparser==2.23",
   "pycryptodome==3.23.0",
   "Pygments==2.19.2",
   "PyJWT==2.10.1",
   "pymongo==4.10.1",
   "PyMySQL==1.1.2",
   "pyperclip==1.11.0",
   "pypushdeer==0.0.3",
   "pyquery==2.0.1",
   "pyrsistent==0.20.0",
   "PySocks==1.7.1",
   "python-dateutil==2.9.0.post0",
   "python-dotenv==1.2.1",
   "python_hosts==1.1.2",
   "pytz==2024.2",
   "pytz-deprecation-shim==0.1.0.post0",
   "PyVirtualDisplay==3.0",
   "qbittorrent-api==2025.7.0",
   "redis==7.0.1",
   "regex==2024.9.11",
   "requests==2.32.5",
   "ruamel.yaml==0.18.16",
   "ruamel.yaml.clib==0.2.14",
   "six==1.17.0",
   "slack-bolt==1.26.0",
   "slack-sdk==3.37.0",
   "sniffio==1.3.1",
   "sortedcontainers==2.4.0",
   "soupsieve==2.8",
   "SQLAlchemy==2.0.44",
   "stack-data==0.6.3",
   "srt==3.5.3",
   "terminal-layout==3.0.0",
   "tqdm==4.67.1",
   "traitlets==5.14.3",
   "transmission-rpc==7.0.11",
   "trio==0.32.0",
   "trio-websocket==0.12.2",
   "typing_extensions==4.15.0",
   "tzdata==2024.2",
   "tzlocal==5.3.1",
   "urllib3==2.5.0",
   "w3lib==2.3.1",
   "watchdog==5.0.3",
   "wcwidth==0.2.14",
   "websockets==15.0.1",
   "Werkzeug==3.1.3",
   "wsproto==1.2.0",
   "zhconv==1.4.3",
   "jellyfish==1.2.1",
   "chardet==5.2.0",
   "nodriver==0.48.1",
   "filelock==3.20.3",
   "pycryptodomex==3.23.0",
   "pyyaml==6.0.3",
   "httpx[socks]==0.28.1",
   "tenacity==9.1.2",
   "async-lru==2.0.5",
   "pywinpty>=2; sys_platform == \"win32\"",
]

[project.urls]
Homepage = "https://github.com/iMMIQ/nas-tools"
Repository = "https://github.com/iMMIQ/nas-tools"

[dependency-groups]
build = [
  "pyinstaller",
  "pyparsing",
]

[tool.uv]
package = false
