[project]
name = "nas-tools"
version = "3.5.9"
description = "NAS媒体库管理工具"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
   # --- web framework (lock major) ---
   "Flask>=3.1.2,<4",
   "Flask-Login>=0.6.3,<1",
   "Flask-Compress>=1.23,<2",
   "flask-restx>=1.3.2,<2",
   "flask-sock>=0.7.0,<1",
   "Werkzeug>=3.1.3,<4",
   "Jinja2>=3.1.6,<4",
   "itsdangerous>=2.2.0,<3",
   "click>=8.3.0,<9",
   "MarkupSafe>=3.0.3,<4",
   # --- database (lock major) ---
   "SQLAlchemy>=2.0.44,<3",
   "alembic>=1.17.1,<2",
   "PyMySQL>=1.1.2,<2",
   "pymongo>=4.10.1,<5",
   "redis>=7.0.1,<8",
   "DBUtils>=3.1.2,<4",
   # --- http / networking (lock major) ---
   "requests>=2.32.5,<3",
   "httpx[socks]>=0.28.1,<1",
   "urllib3>=2.5.0,<3",
   "certifi>=2024.8.30",
   "idna>=3.11,<4",
   "charset-normalizer>=3.4.4,<4",
   # --- scheduling ---
   "APScheduler>=3.11.1,<4",
   # --- parsing / scraping (lock major) ---
   "beautifulsoup4>=4.14.2,<5",
   "lxml>=5.3.0,<6",
   "pyquery>=2.0.1,<3",
   "parsel>=1.10.0,<2",
   "cssselect>=1.3.0,<2",
   "soupsieve>=2.8,<3",
   "jsonpath>=0.82.2,<1",
   "guessit>=3.8.0,<4",
   # --- media / torrent (lock major) ---
   "PlexAPI>=4.17.1,<5",
   "qbittorrent-api>=2025.7.0,<2026",
   "transmission-rpc>=7.0.11,<8",
   "libtorrent>=2.0.11,<3",
   # --- crypto (lock major) ---
   "cryptography>=44.0.0,<45",
   "pycryptodome>=3.23.0,<4",
   "pycryptodomex>=3.23.0,<4",
   "cffi>=1.17.1,<2",
   "pycparser>=2.23,<3",
   "PyJWT>=2.10.1,<3",
   # --- serialization ---
   "ruamel.yaml>=0.18.16,<1",
   "ruamel.yaml.clib>=0.2.14,<1",
   "jsonschema>=4.25.1,<5",
   "pyrsistent>=0.20.0,<1",
   "msgpack>=1.1.2,<2",
   # --- ai / llm (lock major) ---
   "openai>=1.57.0,<2",
   # --- cloud / storage ---
   "PikPakAPI>=0.1.11,<1",
   # --- browser automation (lock major) ---
   "nodriver>=0.48.1,<1",
   "PyVirtualDisplay>=3.0,<4",
   # --- notifications ---
   "slack-bolt>=1.26.0,<2",
   "slack-sdk>=3.37.0,<4",
   "pypushdeer>=0.0.3,<1",
   # --- cli / terminal ---
   "prompt_toolkit>=3.0.52,<4",
   "colorama>=0.4.6,<1",
   "colored>=1.4.4,<2",
   "tqdm>=4.67.1,<5",
   "terminal-layout>=3.0.0,<4",
   # --- text / i18n (lock major) ---
   "cn2an>=0.5.23,<1",
   "zhconv>=1.4.3,<2",
   "chardet>=5.2.0,<6",
   "srt>=3.5.3,<4",
   "anitopy>=2.1.1,<3",
   "iso639>=0.1.4,<1",
   # --- date / time ---
   "python-dateutil>=2.9.0.post0,<3",
   "pytz>=2024.2",
   "pytz-deprecation-shim>=0.1.0.post0,<1",
   "tzlocal>=5.3.1,<6",
   "tzdata>=2024.2",
   "dateparser>=1.2.2,<2",
   "aniso8601>=9.0.1,<10",
   "icalendar>=6.3.2,<7",
   # --- system / process ---
   "psutil>=6.0.0,<7",
   "filelock>=3.20.3,<4",
   "watchdog>=5.0.3,<6",
   "proces>=0.1.7,<1",
   # --- misc utilities ---
   "loguru>=0.7.3,<1",
   "humanize>=4.14.0,<5",
   "pillow>=10.4.0,<11",
   "regex>=2024.9.11",
   "Pygments>=2.19.2,<3",
   "pyyaml>=6.0.3,<7",
   "tenacity>=9.1.2,<10",
   "async-lru>=2.0.5,<3",
   "python-dotenv>=1.2.1,<2",
   "python_hosts>=1.1.2,<2",
   "func_timeout>=4.3.5,<5",
   "cacheout>=0.16.0,<1",
   "cachetools>=5.5.0,<6",
   "PySocks>=1.7.1,<2",
   "pyperclip>=1.11.0,<2",
   "jellyfish>=1.2.1,<2",
   "six>=1.17.0,<7",
   "wcwidth>=0.2.14,<1",
   "attrs>=24.2.0",
   "typing_extensions>=4.15.0",
   # --- async (lock major) ---
   "greenlet>=3.1.1,<4",
   "trio>=0.32.0,<1",
   "trio-websocket>=0.12.2,<1",
   "outcome>=1.3.0.post0,<2",
   "sniffio>=1.3.1,<2",
   "h11>=0.16.0,<1",
   "wsproto>=1.2.0,<2",
   "websockets>=15.0.1,<16",
   "async-generator>=1.10,<2",
   "fast-bencode>=1.1.7,<2",
   # --- debug / dev utilities ---
   "asttokens>=2.4.1,<3",
   "executing>=2.2.1,<3",
   "stack-data>=0.6.3,<1",
   "matplotlib-inline>=0.2.1,<1",
   "pure_eval>=0.2.3,<1",
   "decorator>=5.2.1,<6",
   "traitlets>=5.14.3,<6",
   "backcall>=0.2.0,<1",
   "pexpect>=4.9.0,<5",
   "ptyprocess>=0.7.0,<1",
   "pickleshare>=0.7.5,<1",
   "jedi>=0.19.2,<1",
   "parso>=0.8.5,<1",
   "better-exceptions>=0.3.3,<1",
   "sortedcontainers>=2.4.0,<3",
   "backports.shutil-get-terminal-size>=1.0.0,<2",
   "parse>=1.20.2,<2",
   "w3lib>=2.3.1,<3",
   "influxdb>=5.3.2,<6",
   "Mako>=1.3.10,<2",
   "pywinpty>=2; sys_platform == \"win32\"",
]

[project.urls]
Homepage = "https://github.com/iMMIQ/nas-tools"
Repository = "https://github.com/iMMIQ/nas-tools"

[dependency-groups]
build = [
  "pyinstaller",
  "pyparsing",
]

[tool.uv]
package = false
